# pallets-vuln

balance-fetcher/: Cargo.toml  pallet-balance-fetcher.rs
balance-fetcher/src/: lib.rs
weight-vuln/: Cargo.toml  weight-pallet.rs
weight-vuln/src/: lib.rs
weight-vuln2/: cargo.toml  vuln-pallet.rs
weight-vuln2/src/: app.js  metadata.json
