[package]
name = "pallet-vulnerable"
version = "0.1.0"
edition = "2018"
authors = ["Ahmet Kulekci"]
description = "Demonstrate a weight vulnerability"
repository = "https://github.com/your-repo/pallet-vulnerable"
license = "Unlicense/MIT"
homepage = "https://substrate.dev"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = ["derive"] }
frame-support = { version = "28.0.0", default-features = false }
frame-system = { version = "28.0.0", default-features = false }

# Add dependencies required by your pallet
# [dependencies.your-dependency]
# version = "0.1.0"

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    # Add std feature of your dependencies
    # "your-dependency/std",
]

[dev-dependencies]
sp-core = { version = "28.0.0", default-features = false, features = ["std"] }
sp-io = { version = "30.0.0", default-features = false, features = ["std"] }
sp-runtime = { version = "31.0.0", default-features = false, features = ["std"] }

[build-dependencies]
substrate-build-script-utils = "11.0"

[lib]
name = "pallet_vulnerable"
crate-type = ["rlib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[profile.release]
panic = "abort"
lto = true
opt-level = 3
debug-assertions = false
overflow-checks = true
